<resources>
    <string name="app_name">Cut Loose</string>

    <!-- CHAT -->
    <string name="chat_hint">Type a message!</string>
    <string name="chat_search">Searching for friends...</string>

    <!-- LOGIN -->
    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Password</string>
    <string name="app_description">Match, chat, meet up!</string>
    <string name="login_button">Log in!</string>
    <string name="forgot_password"><a href="http://www.google.com">Forgot my password...</a></string>
    <string name="sign_up"><a href="http://www.google.com">Sign Up!</a></string>

    <string name="event_title">Activities</string>
    <string name="event_item_popularity_hint">Clicks:</string>
    <string name="event_item_active_count_hint">Active:</string>

    <string name="my_chats">My Chats</string>

    <string name="profile">Profile</string>
    <string name="my_chats_item_prefix">Chat with:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register">Register</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="see_users">See Users</string>
    <string name="refresh">Refresh</string>
</resources>
